--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "retejs-v2-context-menu",
   "version": "1.0.0",
-  "description": null,
-  "keywords": ["rete.js", "rete.js 2"],
+  "description": "",
+  "keywords": [
+    "rete.js",
+    "rete.js 2"
+  ],
   "main": "src/index.tsx",
   "dependencies": {
+    "antd": "^5.21.6",
     "elkjs": "0.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,5 +34,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
